--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2368,7 +2368,8 @@ body.menu-expanded button path {
   font-size: 1.8rem;
   line-height: 150%;
   font-weight: bold;
-  margin-bottom: 3.2rem;
+
+  margin-top: 5rem;
 }
 
 
