--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4229,7 +4229,10 @@ footer .social-links li:nth-child(4) svg path:nth-child(2) {
 
 
 
-
+@media (min-width: 1088px) {
+    .category-card .card-title {
+        font-size: 5rem ! Important;
+    }}
 
 /*-----------------------------------*\
   #RESET
