--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3676,6 +3676,11 @@ footer .social-links li:nth-child(4) svg path:nth-child(2) {
 }
 
 
+ @media (max-width: 1200px) {
+            .hero-title {
+                font-size: 2rem; /* Tamanho reduzido para telas médias */
+            }
+        }
 
 @media (max-width: 1023px) {
   header{
