--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3677,7 +3677,7 @@ footer .social-links li:nth-child(4) svg path:nth-child(2) {
 
 
  @media (max-width: 1200px) {
-            .hero-title {
+                #home h1 {
                 font-size: 2rem; /* Tamanho reduzido para telas médias */
             }
         }
