--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3720,7 +3720,7 @@ footer .social-links li:nth-child(4) svg path:nth-child(2) {
 
  @media (max-width: 1199px) {
                 #home h1 {
-                font-size: 9rem!important; /* Tamanho reduzido para telas médias */
+                font-size: 9rem; 
             }
       #home .wrapper {
          font-sie:9rem!important;
