--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3718,7 +3718,7 @@ footer .social-links li:nth-child(4) svg path:nth-child(2) {
 }
 
 
- @media (max-width: 1199px) {
+ @media (min-width: 1199px) {
                 #home h1 {
                 font-size: 9rem; 
             }
