--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -582,6 +582,8 @@ height: 11rem!important;
 
 #bax{
   margin-top: 10rem !important;
+  position: absolute;
+  margin-left: 30rem !important;
 }
 #zer{
   font-size: 1.2rem!important;
@@ -595,7 +597,7 @@ height: 11rem!important;
 }
 #home h1 {
   margin-top: -26rem;
-  font-size: 5rem!important;
+  font-size: 5rem !important;
 }
 .mov{
   margin-left: 40rem;
