--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -578,8 +578,6 @@ height: 11rem!important;
   }
 
 @media (max-width: 991px) {
-
-
 #bax{
   margin-top: 10rem !important;
   position: absolute;
@@ -675,7 +673,7 @@ margin-left: 1rem!important;
     margin-left: 11.3rem;
   }
 
-}
+}}
 
 @media (max-width: 767px) {
   #home h1{
