--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3730,7 +3730,7 @@ footer .social-links li:nth-child(4) svg path:nth-child(2) {
   }
   }
 
-@media (max-width: 991px) {
+@media (min-width: 970px) {
 #bax{
   margin-top: 10rem !important;
   position: absolute;
