--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4483,13 +4483,48 @@ body {
 
 @media (min-width: 710px) {
     #zer{
-      max-width: 100%; /* Limita a largura máxima ao tamanho da tela */
-    overflow-wrap: break-word; /* Quebra palavras longas */
-    word-wrap: break-word; /* Compatibilidade com navegadores antigos */
-    white-space: normal; /* Permite que o texto quebre em várias linhas */
+      
+        font-size: 1.2rem !important;
+        margin-left: -7rem;
+        width: 100%;
+        max-width: 121%;
+        overflow: hidden;
+        word-break: break-word;
+        white-space: normal;
+        
     }
 }
+@media (min-width: 645px) {
+    #zer{
+      
+        font-size: 1.2rem !important;
+        margin-left: -2rem;
+        width: 100%;
+        max-width: 99%;
+        overflow: hidden;
+        word-break: break-word;
+        white-space: normal;
+        
+    }
+}
+@media (min-width: 511px) {
+    #home h1 {
+        margin-top: -29rem;
+        font-size: 3rem !important;
+    }
+      #home .wrapper {
+     
+        font-size: 27px;
+        margin-left: 27rem !important;
+    }
+    #home img {
+        display: inline-masonry!important;
+    }
+  
+}
+}
 
+}
 
 
 
