--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5112,3 +5112,108 @@ body {
   .footer-top .container { max-width: 1200px; }
 
 }
+
+@media (max-width: 300px) {
+    #home h1 {
+        margin-top: -26rem;
+        font-size: 2.2rem !important;
+    }
+      .hero .wrapper .strong {
+        font-size: 2.2rem !important;
+    }
+  #home p {
+        font-size: 1rem !important;
+        margin-left: -18rem;
+        width: 27rem;
+    }
+}
+@media (max-width: 300px) {
+    .hero .wrapper .strong {
+        font-size: 2.5rem !important;
+    }
+      #home p {
+        font-size: 1rem !important;
+        margin-left: -12rem;
+        max-width: 28rem;
+    }
+      #home img {
+        margin-left: -29rem !important;
+    }
+
+}
+
+@media (max-width: 400px) {
+    #home h1 {
+        margin-top: -26rem;
+        font-size: 3.2rem !important;
+    }
+}
+
+@media (max-width: 440px) {
+.hero .wrapper .strong {
+        font-size: 3rem !important;
+    }
+
+}
+@media (max-width: 550px) {
+    #home h1 {
+        margin-top: -29rem;
+        font-size: 4rem !important;
+    }
+      #home .wrapper {
+        font-size: 40px;
+        margin-left: 27rem !important;
+    }
+     .hero .wrapper .strong {
+    position: absolute;
+    top: 0;
+    left: 33%;
+    transform: translateX(-50%);
+    width: 300px;
+    font-weight: inherit;
+    display: flex;
+}
+}
+@media (max-width: 770px) {
+  #home h1 {
+        margin-top: -29rem;
+        font-size: 5rem !important;
+    }
+    #home .wrapper {
+        font-size: 47px;
+        margin-left: 27rem !important;
+    }
+      #home img {
+        margin-left: -11rem !important;
+    }
+}
+
+
+
+
+
+
+@media (max-width: 992px) {
+
+#home img {
+    width: 30rem;
+    min-width: 14.5rem;
+    display: block;
+    margin-inline: auto;
+    filter: contrast(1.2);
+    margin-left: -2rem;
+    margin-top: 12rem !important;
+}
+    #home h1 {
+        margin-top: -29rem;
+        font-size: 8rem !important;
+    }
+    #home .wrapper {
+        font-size: 66px;
+        margin-left: 27rem !important;
+    }
+  
+}
+
+
+
