--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -533,22 +533,22 @@ body.active { overflow: hidden; }
 }
 
 .hero-title{
-  font-size: 10rem!important;
+  font-size: 10rem;
   margin-top: 0rem;
   margin-left: 7rem;
 }
 #home .wrapper{
-height: 11rem!important;
+height: 11rem;
 }
 #home img{
-  width: 30rem!important;
+  width: 30rem;
  
 }
 .category-list{
-  justify-content: center!important;
+  justify-content: center;
 }
 .category-card .card-title{
-  font-size: 5.5rem!important;
+  font-size: 5.5rem;
 }
 
 
@@ -696,7 +696,7 @@ height: 11rem!important;
   margin-block-end: 10px;
   text-align: center;
   transition: var(--transition-2);
-  font-size: 2.5rem!important;
+  font-size: 2.5rem;
 }
 
 .category-card:is(:hover, :focus-visible) .card-title { color: var(--white); }
@@ -716,7 +716,7 @@ height: 11rem!important;
 
 #img-cover{
   width: 40rem;
-  margin-top: 0rem!important;
+  margin-top: 0rem;
 }
 .about .wrapper,
 .about-banner { padding-inline-start: 45px; }
@@ -737,12 +737,12 @@ height: 11rem!important;
   text-align: left;
 }
 .shape-3{
-  width: 25rem!important;
+  width: 25rem;
 }
 .assinatura{
-  width: 15rem!important;
+  width: 15rem;
   margin-left: -50rem;
-  margin-top: 21rem!important;
+  margin-top: 21rem;
 }
 .about .wrapper::before {
   top: 10px;
@@ -756,7 +756,7 @@ height: 11rem!important;
 
 
 .shape-1{
-  width: 15rem!important;
+  width: 15rem;
   }
 
 
@@ -882,7 +882,7 @@ height: 11rem!important;
   #FOOTER
 \*-----------------------------------*/
 .fon{
-  font-size: 2rem!important;
+  font-size: 2rem;
 }
 
 .footer{ position: relative; 
@@ -902,7 +902,7 @@ background: url("./assets/images/footer-bg.jpg");
   margin-block: 20px 90px;
   line-height: normal;
   font-size: 7rem;
-  margin-top: 50rem!important;
+  margin-top: 50rem;
   margin-bottom: 10rem;
 }
 
@@ -1596,7 +1596,7 @@ section span {
 .button {
   background: #383838;
   border: 0.2rem solid #383838;
-  color: #fff!important;
+  color: #fff;
 border-radius: 5px;
 box-shadow: 4px 4px 2px var(--primary-color);
   margin-bottom: 6rem;
@@ -1625,7 +1625,7 @@ body.light-mode #home h4 {
 
 
 .button:hover {
-  color: #383838!important;
+  color: #383838;
   background-color: var(--primary-color);
   border: 0.2rem solid var(--primary-color);
   border-radius: 5px;
@@ -1842,7 +1842,7 @@ nav#navigation .menu ul li a {
 
 
 .nav-logo{
-  padding-top: 10px!important;
+  padding-top: 10px;
 }
 
 
@@ -2169,7 +2169,7 @@ body.light-mode #home img#notebook-2-white {
 
 
 .sobre-list {
-  display: flex!important;
+  display: flex;
   gap: 45px;
   margin-left: 5rem;
 }
@@ -2177,7 +2177,7 @@ body.light-mode #home img#notebook-2-white {
 
 
 .letra{
-  margin-block: 0.5rem!important;
+  margin-block: 0.5rem;
 }
 
 
@@ -2967,9 +2967,9 @@ footer .social-links li:nth-child(4) svg path:nth-child(2) {
   position: absolute;
   bottom: -160px;
   left: -30px;
-  width: 300px!important;
+  width: 300px;
   animation: rotate360 15s linear infinite reverse;
-  margin-left: 60rem!important;
+  margin-left: 60rem;
   margin-bottom: 20rem;
 }
 
@@ -3176,7 +3176,7 @@ footer .social-links li:nth-child(4) svg path:nth-child(2) {
     align-self: center;
   }
   #home h1 {
-    font-size: 8rem!important;
+    font-size: 8rem;
   }
   #home .content p {
     font-size: 2.5rem;
@@ -3295,14 +3295,14 @@ footer .social-links li:nth-child(4) svg path:nth-child(2) {
     margin-bottom: 3rem;
   }
   #home{
-   height: 100rem!important;
+   height: 100rem;
   }
   #projects{
     max-height: 11100rem;
   }
   .col-3{
-    width: 40%!important;
-    padding-right: 0px!important;
+    width: 40%;
+    padding-right: 0px;
     padding-top: 2rem;
   }
   #knowledge .card{
@@ -3313,17 +3313,17 @@ footer .social-links li:nth-child(4) svg path:nth-child(2) {
     margin-left: 7rem;
 }
 .col-a{
-  text-align: center!important;
+  text-align: center;
 }
 .social-links {
- justify-content: center!important;
+ justify-content: center;
 }
 .alter{
   text-align: center;
-  margin-left: 0rem!important;
+  margin-left: 0rem;
 }
 #home h1 {
-  font-size: 7rem!important;
+  font-size: 7rem;
 }
 }
 
@@ -3331,34 +3331,34 @@ footer .social-links li:nth-child(4) svg path:nth-child(2) {
 
 @media (max-width: 851px) {
   .rotate-img{
-    margin-left: 12rem!important;
+    margin-left: 12rem;
   }
   .blog .section-text { 
    
-    padding: 0 2rem!important;
+    padding: 0 2rem;
   }
   }
 
 @media (max-width: 991px) {
    
 #bax{
-  margin-top: 10rem !important;
+  margin-top: 10rem ;
   position: absolute;
-  margin-left: 30rem !important;
+  margin-left: 30rem ;
 }
 #zer{
-  font-size: 1.2rem!important;
+  font-size: 1.2rem;
 }
 .hero-banner{
   margin-top: 4rem;
   position: absolute;
 }
 #home img {
-  margin-left: -12rem!important;
+  margin-left: -12rem;
 }
 #home h1 {
   margin-top: -26rem;
-  font-size: 5rem !important;
+  font-size: 5rem ;
 }}
 }
 @media (max-width: 500px) {
@@ -3373,13 +3373,13 @@ footer .social-links li:nth-child(4) svg path:nth-child(2) {
     font-size: 1.4rem;
   }
   .col-3{
-    width: 100%!important;
-      padding-right: 0px!important;
-      padding-left: 0px!important;
+    width: 100%;
+      padding-right: 0px;
+      padding-left: 0px;
     padding-top: 2rem;
   }
   .imagem-bloco{
-    margin-left: 0px!important;
+    margin-left: 0px;
   }
   #projects{
     max-height: 16000rem;
@@ -3393,10 +3393,10 @@ footer .social-links li:nth-child(4) svg path:nth-child(2) {
     margin-left: 2rem;
 }
 .col-a{
-  text-align: center!important;
+  text-align: center;
 }
 .social-links {
- justify-content: center!important;
+ justify-content: center;
 }
   /*===== NAVEGATION ==================================*/
   nav#navigation button svg {
@@ -3427,7 +3427,7 @@ footer .social-links li:nth-child(4) svg path:nth-child(2) {
     font-size: 1.6rem;
   }
   .rotate-img{
-    width: 215px!important;
+    width: 215px;
   }
   @keyframes typing {
     from {
@@ -3485,31 +3485,31 @@ footer .social-links li:nth-child(4) svg path:nth-child(2) {
     margin-left: 0rem;
 }
 .col-a{
-  text-align: center!important;
+  text-align: center;
 }
 .social-links {
- justify-content: center!important;
+ justify-content: center;
 }
 .rotate-img{
-  width: 183px!important;
+  width: 183px;
 }
 }
 
 
 @media (max-width: 335px) {
     #home img {
-        margin-left: -34rem !important;
+        margin-left: -34rem ;
     }
       #home h1 {
         margin-top: -26rem;
-        font-size: 2.5rem !important;
+        font-size: 2.5rem ;
     }
       .hero .wrapper .strong {
-        font-size: 2.5rem !important;
+        font-size: 2.5rem ;
        
     }
       #home p {
-        font-size: 1rem !important;
+        font-size: 1rem ;
         margin-left: -15rem;
     }
 }
@@ -4084,14 +4084,14 @@ body {
 
     #home h1 {
         margin-top: -29rem;
-        font-size: 4rem !important;
+        font-size: 4rem ;
     }
 .h2 {
     font-size: 3rem;
     margin-left: 22rem;
 }
      #zer {
-        font-size: 1.2rem !important;
+        font-size: 1.2rem ;
         margin-left: -11rem;
     }
 
@@ -4110,7 +4110,7 @@ body {
 @media (min-width: 710px) {
     #zer{
       
-        font-size: 1.2rem !important;
+        font-size: 1.2rem ;
         margin-left: -7rem;
         width: 100%;
         max-width: 121%;
@@ -4123,7 +4123,7 @@ body {
 @media (min-width: 645px) {
     #zer{
       
-        font-size: 1.2rem !important;
+        font-size: 1.2rem ;
         margin-left: -2rem;
         width: 100%;
         max-width: 99%;
@@ -4136,22 +4136,22 @@ body {
 @media (min-width: 511px) {
     #home h1 {
         margin-top: -29rem;
-        font-size: 3rem !important;
+        font-size: 3rem ;
     }
       #home .wrapper {
      
         font-size: 27px;
-        margin-left: 27rem !important;
+        margin-left: 27rem;
     }
 }
   @media (max-width: 511px) {
    .shape{
-     display: none!important;
+     display: none;
   
 }
         #home h1 {
         margin-top: -26rem;
-        font-size: 3rem !important;
+        font-size: 3rem ;
     }
         #home .wrapper {
         margin-left: 29rem;
@@ -4728,13 +4728,13 @@ body {
 @media (max-width: 300px) {
     #home h1 {
         margin-top: -26rem;
-        font-size: 2.2rem !important;
+        font-size: 2.2rem ;
     }
       .hero .wrapper .strong {
-        font-size: 2.2rem !important;
+        font-size: 2.2rem ;
     }
   #home p {
-        font-size: 1rem !important;
+        font-size: 1rem ;
         margin-left: -18rem;
         width: 27rem;
     }
@@ -4743,24 +4743,24 @@ body {
 @media (max-width: 400px) {
     #home h1 {
         margin-top: -26rem;
-        font-size: 3.2rem !important;
+        font-size: 3.2rem ;
     }
 }
 
 @media (max-width: 440px) {
 .hero .wrapper .strong {
-        font-size: 3rem !important;
+        font-size: 3rem ;
     }
 
 }
 @media (max-width: 550px) {
     #home h1 {
         margin-top: -29rem;
-        font-size: 4rem !important;
+        font-size: 4rem ;
     }
       #home .wrapper {
         font-size: 40px;
-        margin-left: 27rem !important;
+        margin-left: 27rem ;
     }
      .hero .wrapper .strong {
     position: absolute;
@@ -4775,14 +4775,14 @@ body {
 @media (max-width: 770px) {
   #home h1 {
         margin-top: -29rem;
-        font-size: 5rem !important;
+        font-size: 5rem ;
     }
     #home .wrapper {
         font-size: 47px;
-        margin-left: 27rem !important;
+        margin-left: 27rem ;
     }
       #home img {
-        margin-left: -11rem !important;
+        margin-left: -11rem ;
     }
 }
 
@@ -4800,15 +4800,15 @@ body {
     margin-inline: auto;
     filter: contrast(1.2);
     margin-left: -2rem;
-    margin-top: 12rem !important;
+    margin-top: 12rem ;
 }
     #home h1 {
         margin-top: -29rem;
-        font-size: 8rem !important;
+        font-size: 8rem ;
     }
     #home .wrapper {
         font-size: 66px;
-        margin-left: 27rem !important;
+        margin-left: 27rem ;
     }
   
 }
@@ -4817,15 +4817,15 @@ body {
 
 @media (max-width: 300px) {
     .hero .wrapper .strong {
-        font-size: 2.5rem !important;
+        font-size: 2.5rem ;
     }
       #home p {
-        font-size: 1rem !important;
+        font-size: 1rem ;
         margin-left: -12rem;
         max-width: 28rem;
     }
       #home img {
-        margin-left: -29rem !important;
+        margin-left: -29rem ;
     }
 
 }
@@ -4836,37 +4836,37 @@ body {
   margin-left: 2.3rem;
 }
 #assinatura{
-  margin-top: 11rem!important;
+  margin-top: 11rem;
 }
 
 }
 @media (max-width: 1023px) {
   #assinatura{
     margin-left: 0rem;
-    margin-top: -1rem!important;
+    margin-top: -1rem;
   }
 
   }
 
 @media (max-width: 991px) {
 #bax{
-  margin-top: 10rem !important;
+  margin-top: 10rem ;
   position: absolute;
-  margin-left: 30rem !important;
+  margin-left: 30rem ;
 }
 #zer{
-  font-size: 1.2rem!important;
+  font-size: 1.2rem;
 }
 .hero-banner{
   margin-top: 4rem;
   position: absolute;
 }
 #home img {
-  margin-left: -12rem!important;
+  margin-left: -12rem;
 }
 #home h1 {
   margin-top: -26rem;
-  font-size: 5rem !important;
+  font-size: 5rem ;
 }
 .mov{
   margin-left: 40rem;
@@ -4876,33 +4876,33 @@ body {
   position: absolute;
 }
 .hero-title{
-  font-size: 5rem!important;
+  font-size: 5rem;
   margin-left: 10rem;
 }
 
 .section-title{
-  text-align: left!important;
+  text-align: left;
 }
 .about .section-text {
 margin-left: -10rem;
 }
 .about .wrapper::before {
-left: 26px!important;
+left: 26px;
 }
 .img {
-width: 15rem!important;
+width: 15rem;
 }
 #img-cover{
-  width: 40rem!important;
+  width: 40rem;
 }
 .shape-1{
-  width: 100px!important;
+  width: 100px;
 }
 #img-cover:hover {
 width: 100rem;
   }
   .tamanh{
-    text-align: center!important;
+    text-align: center;
   }
   .footer{
    height: 100rem;
@@ -4914,20 +4914,20 @@ width: 100rem;
   ABOUT ME
   */
   .about .section-title {
-    margin-left: 11rem!important;
+    margin-left: 11rem;
   }
   .about .section-text {
-margin-left: 1rem!important;
+margin-left: 1rem;
   }
 
 
 
 
   #tamanh{
-    margin-top: 1rem!important;
+    margin-top: 1rem;
   }
   .section-subtitle{
-    margin-top: -4rem!important;
+    margin-top: -4rem;
     margin-left: 25rem;
   }
   .footer .btn-icon{
@@ -4936,7 +4936,7 @@ margin-left: 1rem!important;
 
 
   .category-card .card-title{
-    font-size: 4.5rem!important;
+    font-size: 4.5rem;
   }
 
   .dog{
@@ -4948,17 +4948,17 @@ margin-left: 1rem!important;
 
 @media (max-width: 767px) {
   #home h1{
-    font-size: 4rem!important;
+    font-size: 4rem;
   }
   #zer{
     margin-left: -7rem;
-    font-size: 1rem!important;
+    font-size: 1rem;
   }
   .about .section-title {
-margin-left: 3rem!important;
+margin-left: 3rem;
   }
   .about .section-title{
-    font-size: 5rem!important;
+    font-size: 5rem;
   }
   .img-holder{
     background-color: var(--eerie-black);
@@ -4970,7 +4970,7 @@ margin-left: 3rem!important;
     margin-top: 10rem;
   }
   .footer-top .section-title{
-    font-size: 5rem!important;
+    font-size: 5rem;
   }
   .dog{
   
@@ -4983,10 +4983,10 @@ margin-left: 3rem!important;
 
 @media (max-width: 670px) {
   .section-title{
-  font-size: 6rem!important;
+  font-size: 6rem;
   }
   #fon{
-    font-size: 1rem!important;
+    font-size: 1rem;
   }
 }
 @media (max-width: 540px) {
@@ -4997,7 +4997,7 @@ margin-left: 3rem!important;
     left: 54%;
   }
   #home img {
-    margin-left: -25rem!important;
+    margin-left: -25rem;
   }
   .sub{
     margin-left: -5rem;
@@ -5017,40 +5017,40 @@ margin-left: 3rem!important;
 }
 @media (max-width: 470px) {
   #home h1{
-    font-size: 4rem!important;
+    font-size: 4rem;
   }
   .hero .wrapper .strong{
-    font-size: 4rem!important;
+    font-size: 4rem;
   }
   #home p {
     margin-left: -10rem;
   }
   #home img{
-    margin-left: -33rem!important;
+    margin-left: -33rem;
   }
   .about .section-title{
-    margin-left: -1rem!important;
+    margin-left: -1rem;
   }
   .about .wrapper::before{
-    left: -2rem!important;
+    left: -2rem;
   }
   .about .section-text{
-    margin-left: -4rem!important;
+    margin-left: -4rem;
     margin-right: 5rem;
-   font-size: 2rem!important;
+   font-size: 2rem;
   }
   .sub{
     margin-left: -65rem;
     height: 10rem;
   }
   .about .shape-1 {
-    bottom: 6%!important;
+    bottom: 6%;
     margin-left: 3rem;
   
   }
   .section-subtitle {
     margin-left: 0rem;
-    margin-top: -4rem!important;
+    margin-top: -4rem;
   }
 
   .dog{
@@ -5092,12 +5092,12 @@ margin-left: 3rem!important;
 }
 @media (max-width: 497px) {
   #home h1{
-    font-size: 3rem!important;
+    font-size: 3rem;
   }
 }
 @media (max-width: 492px) {
   #home h1 {
-    font-size: 3rem !important;
+    font-size: 3rem ;
   }
   #home p {
     font-size: 12px;
@@ -5107,7 +5107,7 @@ margin-left: 3rem!important;
 
 @media (max-width: 439px) {
   .hero .wrapper .strong {
-    font-size: 30px !important;
+    font-size: 30px ;
   }
   #home p {
     font-size: 12px;
@@ -5121,8 +5121,8 @@ margin-left: 3rem!important;
     margin-left: 28rem;
   }
   #home h1{
-    font-size: 3rem !important;
-    margin-left: 1rem!important;
+    font-size: 3rem ;
+    margin-left: 1rem;
   }
   .hero .wrapper .strong{
     left: 17%;
@@ -5138,23 +5138,23 @@ margin-left: 3rem!important;
 
  
   #home h1{
-    font-size: 3rem!important;
+    font-size: 3rem;
   }
   .hero .wrapper .strong{
-    font-size: 3rem!important;
+    font-size: 3rem;
   }
   #home p{
-    font-size: 1rem!important;
+    font-size: 1rem;
     margin-left: -12rem;
   }
   .category-card .card-title{
-    font-size: 2.5rem!important;
+    font-size: 2.5rem;
   }
   .about .section-title {
-    font-size: 4rem!important;
+    font-size: 4rem;
   }
   .about .section-text{
-    font-size: 1.8rem!important;
+    font-size: 1.8rem;
   }
   .footer .btn-icon {
     margin-top: 18rem;
